# RealEstateAI

./: .gitignore  HomeMatch.ipynb  example.csv  listings.txt  pyproject.toml  real_estate_AI_listings.csv  real_estate_AI_listings2.csv
data/output/: embeddings.csv  gpt_descriptions.csv  listings.csv  synthetic_real_estate_listings.csv  synthetic_real_estate_listings2.csv
real_estate_lancedb/real_estate_listings.lance/_transactions/: 0-1af850c3-46b1-4bf3-8b36-869dbb285543.txn  0-3f33527b-5337-4543-8857-d4c7d107c046.txn
real_estate_lancedb/real_estate_listings.lance/_versions/: 1.manifest
real_estate_lancedb/real_estate_listings.lance/data/: 1d5b7125-d1df-40f4-8acc-f8f4a86d1b41.lance  85a6cf67-f3e0-4be6-9b98-ead857bae6db.lance
